{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 5,
  "lineage": "8d1eb015-5d29-694b-bd5a-53dff93423b9",
  "resources": [
    {
      "module": "module.ec2-cluster[0]",
      "mode": "data",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104398007503:subnet/subnet-0ca16fdf866acfc79",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "available_ip_address_count": 4090,
            "cidr_block": "172.31.32.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ca16fdf866acfc79",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "104398007503",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "state": "available",
            "vpc_id": "vpc-08568e7ba3c3e96bf"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.ec2-cluster[0]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ignore_ami",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.ec2-cluster[0]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104398007503:security-group/sg-03be28f07417a9af7",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-03be28f07417a9af7",
            "ingress": [],
            "name": "my-cluster-20260105052600889500000001",
            "name_prefix": "my-cluster-",
            "owner_id": "104398007503",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "my-cluster",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-cluster",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-08568e7ba3c3e96bf"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "104398007503",
            "id": "sg-03be28f07417a9af7",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.ec2-cluster.data.aws_subnet.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2-cluster[0]",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ipv4_default",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104398007503:security-group-rule/sgr-087221b975f9135b6",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all IPv4 traffic",
            "from_port": null,
            "id": "sgr-087221b975f9135b6",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-03be28f07417a9af7",
            "security_group_rule_id": "sgr-087221b975f9135b6",
            "tags": {
              "Environment": "dev",
              "Name": "my-cluster-ipv4_default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-cluster-ipv4_default",
              "Terraform": "true"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "104398007503",
            "id": "sgr-087221b975f9135b6",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.ec2-cluster.aws_security_group.this",
            "module.ec2-cluster.data.aws_subnet.this"
          ]
        },
        {
          "index_key": "ipv6_default",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104398007503:security-group-rule/sgr-0427ff5293162e999",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": "Allow all IPv6 traffic",
            "from_port": null,
            "id": "sgr-0427ff5293162e999",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-03be28f07417a9af7",
            "security_group_rule_id": "sgr-0427ff5293162e999",
            "tags": {
              "Environment": "dev",
              "Name": "my-cluster-ipv6_default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-cluster-ipv6_default",
              "Terraform": "true"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "104398007503",
            "id": "sgr-0427ff5293162e999",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.ec2-cluster.aws_security_group.this",
            "module.ec2-cluster.data.aws_subnet.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2-cluster[0]",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    }
  ]
}